# pythia

./: .gitignore  Dockerfile  LICENSE.txt  Pipfile  README.md  default.nix  develop.nix  environment-dev.yml  environment.yml  guide.adoc  project.adoc  project.org  pyproject.toml  pythia.py  readthedocs.yml  sample.json  tox.ini
.github/ISSUE_TEMPLATE/: improvement-task.md
.github/workflows/: release.yml
docs/: RELEASING.md  about.rst  conf.py  index.rst  json.rst
docs/source/: conf.py
pythia/: __init__.py  __main__.py  analytic_functions.py  analytics.py  cache_manager.py  cli.py  config.py  custom_raster_creator.py  dssat.py  functions.py  gis.py  io.py  peerless.py  plugin.py  rescale.py  runner.py  soil_handler.py  template.py  util.py
pythia/plugins/iita/: functions.py
pythia/plugins/pest_infestation/: __init__.py
pythia/plugins/sensitivity_plugin/: __init__.py
pythia/plugins/test_plugin/: __init__.py
pythia/plugins/weather_forecast_simple/: __init__.py
pythia/tests/: plugin_test.py  raster_functions_test.py
rasters/: eGHR_soils_raster.tif
v1/: pythia.py
