[tool.poetry]
name = "pythia"
version = "2.0.0"
description = "An extensible gridded modeling framework for point-based modeling."
authors = ["Christopher Villalobos <cvillalobos@ufl.edu>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.7"
fiona = "^1.8"
jinja2 = "^2.10"
numpy = "^1.16"
pandas = "^0.25"
pillow = "^5.4"
rasterio = "^1.0"
shapely = "^1.6"
rtree = "^0.8"

[tool.poetry.dev-dependencies]
pytest = "^5.1"

[tool.poetry.scripts]
pythia = "pythia.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
