[tool.poetry]
name = "pythia"
version = "2.1.7"
description = "An extensible gridded modeling framework for point-based modeling."
authors = ["Christopher Villalobos <cvillalobos@ufl.edu>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.8"
fiona = "^1.8"
jinja2 = "^3.0"
numpy = "^1.16"
rasterio = "^1.0"
shapely = "^1.6"
rtree = "^0.8"

[tool.poetry.dev-dependencies]
pytest = "^5.1"
black = "^21.5b2"
flake8 = "^3.9.2"
neovim = "^0.3.1"
python-lsp-server = {extras = ["all"], version = "^1.2.4"}
pyls-isort = "^0.2.2"
python-lsp-black = "^1.0.0"
pylsp-rope = "^0.1.7"
pyls-flake8 = "^0.4.0"
ipython = "^8.1.0"

[tool.poetry.scripts]
pythia = "pythia.cli:main"

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
